--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,10 @@
-html, .container-fluid {
+html,
+.container-fluid {
     height: 100%;
     width: 100%;
 }
 
-body{
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     height: 100%;
@@ -11,22 +12,24 @@ body{
     /* overflow: auto; */
 }
 
-ul{
+ul {
     margin: 0px;
     padding: 0px;
 }
 
-ul li{
+ul li {
     list-style: none;
 }
 
-i{
+i {
     font-size: 20px;
     color: #606060;
 }
 
-                                                /* css header */
-#header{
+
+/* css header */
+
+#header {
     /* border: 1px solid #ccc; */
     position: fixed;
     z-index: 10000;
@@ -36,27 +39,27 @@ i{
     display: flex;
 }
 
-#logo{
-    display: flex;    
+#logo {
+    display: flex;
 }
 
-#logo span{
+#logo span {
     width: 42px;
     height: 42px;
     border-radius: 50%;
     margin: 5px 10px;
 }
 
-#logo span:hover{
+#logo span:hover {
     background-color: #d5d5d5;
 }
 
-#logo i{
+#logo i {
     margin: 11px 12px;
     cursor: pointer;
 }
 
-#logo a{
+#logo a {
     justify-content: center;
     background: url(../images/logo.png) no-repeat;
     width: 91px;
@@ -66,12 +69,12 @@ i{
     margin: 16px 15px;
 }
 
-.search{
+.search {
     display: flex;
     position: relative;
 }
 
-.search input{
+.search input {
     width: 575px;
     height: 30px;
     border: 1px solid #d2d2d2;
@@ -80,35 +83,37 @@ i{
     font-size: 16px;
 }
 
-.keyboard-icon{
+.keyboard-icon {
     position: absolute;
     right: 78px;
     top: 6px;
 }
 
-#search-header span{
+#search-header span {
     margin: 4px 18px;
+    cursor: pointer;
 }
 
-#search-header{
+#search-header {
     margin: auto;
     display: flex;
 }
 
-.button{
+.button {
     display: flex;
     background-color: #f8f8f8;
     border: 1px solid #ccc;
     height: 30px;
     width: 65px;
     margin-left: -1px;
+    cursor: pointer;
 }
 
-.button i{
+.button i {
     margin: auto;
 }
 
-#functions-header{
+#functions-header {
     display: flex;
     /* border: 1px solid #ccc; */
     width: 250px;
@@ -116,27 +121,33 @@ i{
     margin: auto 0;
 }
 
-#functions-header i{
+#functions-header i {
     margin: 4px 17px;
+    cursor: pointer;
 }
 
-#functions-header img{
+#functions-header img {
     display: inline;
     width: 32px;
     height: 32px;
     border-radius: 50%;
     margin-left: 12px;
     margin-top: -2px;
+    cursor: pointer;
 }
-                                                /* css header */
 
-#sidebar{
+
+/* css header */
+
+#sidebar {
     position: fixed;
     height: 100%;
 }
 
-                                                /* large sidebar */
-#large-sidebar{
+
+/* large sidebar */
+
+#large-sidebar {
     position: absolute;
     left: 0px;
     top: 56px;
@@ -148,51 +159,55 @@ i{
     overflow-x: hidden;
 }
 
-.menu-first{
+.menu-first {
     margin-top: 12px;
 }
 
-#large-sidebar ul{
+#large-sidebar ul {
     border-bottom: 1px solid #ccc;
     padding-bottom: 11px;
 }
 
-#large-sidebar ul .selected:hover{
-    background-color:#d9d9d9;
+#large-sidebar ul .selected:hover {
+    background-color: #d9d9d9;
 }
 
-ul li:hover{
+ul li:hover {
     background-color: #f2f2f2;
     cursor: pointer;
 }
 
-#large-sidebar ul li a i{
+#large-sidebar ul li a i {
     margin: 12px 24px 12px 22px;
 }
 
-#large-sidebar ul li a{
+#large-sidebar ul li a {
     font-size: 14px;
     font-family: 'Roboto', sans-serif;
     color: #030303;
     text-decoration: none;
 }
 
-.selected{
+.selected {
     background-color: #e5e5e5;
     font-weight: bold;
 }
 
-.selected i{
+.selected i {
     color: red;
 }
 
-.menu-second{
+.menu-second {
     margin-top: -7px;
 }
-                                                /* large sidebar */
 
-                                                /* small sidebar */
-#small-sidebar{
+
+/* large sidebar */
+
+
+/* small sidebar */
+
+#small-sidebar {
     float: left;
     /* background-color: blue; */
     width: 72px;
@@ -200,11 +215,11 @@ ul li:hover{
     margin-top: 56px;
 }
 
-#small-sidebar ul{
+#small-sidebar ul {
     padding: 10px 0px 10px 0px;
 }
 
-#small-sidebar ul li a{
+#small-sidebar ul li a {
     text-align: center;
     font-size: 10px;
     font-family: 'Roboto', sans-serif;
@@ -213,26 +228,29 @@ ul li:hover{
     /* margin: 10px 10px; */
 }
 
-.selected2 a i{
+.selected2 a i {
     color: red;
 }
 
-.selected2 a p{
+.selected2 a p {
     color: red;
 }
 
-#small-sidebar ul li a i{
+#small-sidebar ul li a i {
     margin-left: 21.5px;
 }
 
-#small-sidebar ul li a p{
+#small-sidebar ul li a p {
     margin-left: -12px;
 }
-                                                /* small sidebar */
 
 
-                                                /* css main */
-#main{
+/* small sidebar */
+
+
+/* css main */
+
+#main {
     background: #f9f9f9;
     width: calc(100% - 240px);
     height: 100%;
@@ -240,53 +258,56 @@ ul li:hover{
     padding: 66px 3%;
 }
 
-#main a{
+#main a {
     text-decoration: none;
     color: black;
 }
 
-#main .row .card{
+#main .row .card {
     padding: 12px 8px;
     border: 0px;
+    background-color: #f9f9f9;
 }
 
-.card-title{
+.card-title {
     font-size: 14px;
 }
 
-.card-text{
+.card-text {
     font-size: 14px;
     color: #555;
-    margin-top: -5px;
+    margin-top: -4px;
 }
 
-.chanel-icon{
+.chanel-icon {
     height: 36px;
     width: 36px;
+    border-radius: 50%;
 }
 
-.card-body{
+.card-body {
     display: flex;
 }
 
-.info-video{
+.info-video {
     margin: -8px 30px;
 }
 
-.chanel-link-icon{
+.chanel-link-icon {
     margin: -10px -20px;
 }
+
 
 /* .chanel-link-text{
     margin-top: -7px;
 } */
 
-.chanel-link-text:hover{
+.chanel-link-text:hover {
     color: black;
     font-weight: 400;
 }
 
-.blur{
+.blur {
     background-color: #000000;
     opacity: 0;
     height: 100%;
@@ -296,9 +317,13 @@ ul li:hover{
     right: -14.5px;
     display: none;
 }
-                                                /* css main */
 
-                                                /* thanh cuộn CSS */
+
+/* css main */
+
+
+/* thanh cuộn CSS */
+
 #large-sidebar::-webkit-scrollbar {
     background-color: #cccaca;
     width: 0px;
@@ -330,34 +355,40 @@ ul li:hover{
 #large-sidebar::-webkit-scrollbar-thumb:hover {
     background: #cccaca;
 }
-                                                /* thanh cuộn CSS */
 
-                                                /* responsive */
 
-@media only screen and (max-width: 1200px){
-    .search input{
+/* thanh cuộn CSS */
+
+
+/* responsive */
+
+@media only screen and (max-width: 1200px) {
+    .search input {
         width: 420px;
     }
 }
-@media only screen and (max-width: 992px){
-    .search input{
+
+@media only screen and (max-width: 992px) {
+    .search input {
         width: 180px;
     }
 }
-@media only screen and (max-width: 768px){
-    .search input{
-        width: 78px;
-    }
 
-    .keyboard-icon{
-        top: -27px;
-    }
-}
-@media only screen and (max-width: 576px){
-    .search input{
+@media only screen and (max-width: 768px) {
+    .search input {
         width: 78px;
+    }
+    /* ẩn keyboard icon ra khỏi cửa sổ trình duyệt */
+    .keyboard-icon {
+        top: -100px;
     }
 }
 
+@media only screen and (max-width: 576px) {
+    .search input {
+        width: 78px;
+    }
+}
 
-                                                /* responsive */
+
+/* responsive */
