--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ i {
     top: 56px;
     z-index: 10002;
     background-color: #ffffff;
-    height: 100%;
+    height: calc(100% - 56px); /*do top bị kéo xuống 56px = chiều cao header*/
     width: 240px;
     overflow-y: scroll;
     overflow-x: hidden;
